--- a/beats/base/templates/base/home.html
+++ b/beats/base/templates/base/home.html
@@ -10,48 +10,41 @@
 
     <meta name="description" content="Música para suas criações">
     <meta name="author" content="Fabricio Leite">
-
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
-
+	<style>
+	body {
+	background-color: black;
+	color: white;
+	}
+	</style>
   </head>
   <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
   <a class="navbar-brand" href="{% url 'base:home' %}">FaBeats</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 50px">
 	<div class="row">
-		<div class="col-md-12">
-
-	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-5">
+			<h1>
+				Músicas sem direitos autorais, a trilha para sua história
+			</h1>
 			<p class="text-left lead">
-				Lorem ipsum dolor sit amet, <strong>consectetur adipiscing elit</strong>. Aliquam eget sapien sapien. Curabitur in metus urna. In hac habitasse platea dictumst. Phasellus eu sem sapien, sed vestibulum velit. Nam purus nibh, lacinia non faucibus et, pharetra in dolor. Sed iaculis posuere diam ut cursus. <em>Morbi commodo sodales nisi id sodales. Proin consectetur, nisi id commodo imperdiet, metus nunc consequat lectus, id bibendum diam velit et dui.</em> Proin massa magna, vulputate nec bibendum nec, posuere nec lacus. <small>Aliquam mi erat, aliquam vel luctus eu, pharetra quis elit. Nulla euismod ultrices massa, et feugiat ipsum consequat eu.</small>
+				Todas as nossas faixas são  <strong>100% exclusivas</strong> e livres de direitos autorais.</small>
 			</p>
-			<div class="row">
-				<div class="col-md-6">
-					 
-					<button type="button" class="btn btn-success btn-lg">
-						Button
-					</button>
-				</div>
-				<div class="col-md-6">
-					 
-					<button type="button" class="btn btn-lg btn-success">
-						Button
-					</button>
-				</div>
-			</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-7">
 			<div class="row">
 				<div class="col-md-4">
 					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
@@ -63,7 +56,7 @@
 					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
 				</div>
 			</div>
-			<div class="row">
+			<div class="row" style="margin-top: 20px">
 				<div class="col-md-4">
 					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
 				</div>
@@ -76,6 +69,8 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="container-fluid" style="margin-top: 50px">
 	<div class="row">
 		<div class="col-md-2">
 			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
@@ -86,9 +81,6 @@
 			</h2>
 			<p>
 				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				<a class="btn" href="#">View details »</a>
 			</p>
 		</div>
 	</div>
