--- a/beats/base/templates/base/home.html
+++ b/beats/base/templates/base/home.html
@@ -28,15 +28,15 @@
   <body>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-  <a class="navbar-brand" href="{% url 'base:home' %}">FaBeats</a>
+  <a class="navbar-brand mb-0 h1" href="{% url 'base:home' %}">FaBeats</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 </nav>
 
-    <div class="container-fluid" style="margin-top: 50px">
+    <div class="container" style="margin-top: 100px">
 	<div class="row">
-		<div class="col-md-5">
+		<div class="col-md-5 pt-4">
 			<h1>
 				Músicas sem direitos autorais, a trilha para sua história
 			</h1>
@@ -46,13 +46,13 @@
 		</div>
 		<div class="col-md-7">
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 pb-4">
 					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 pb-4">
 					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 pb-4">
 					<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 		</div>
 	</div>
 
-	<div class="container-fluid" style="margin-top: 50px">
+	<div class="container" style="margin-top: 60px">
 	<div class="row">
 		<div class="col-md-2">
 			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
@@ -85,6 +85,28 @@
 		</div>
 	</div>
 </div>
+<footer class="main-footer mt-5 pt-4">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<h3>Entre em Contato</h3>
+				<address>
+					<a href="tel:+351935118601">+351 935-118-601</a>
+					<br/>
+				<a href="mailto:fabricio_2310@hotmail.com">fabricio_2310@hotmail.com</a>
+			<div/>
+		</div>
+	</div>
+	<div class="container mb-5">
+		<div class="row">
+			<div class="col">
+			{% now 'Y' %} Fabeats. Todos direitos reservados.
+			<div/>
+
+		</div>
+	</div>
+
+<footer/>
 
   </body>
 </html>
