--- a/beats/base/templates/base/home.html
+++ b/beats/base/templates/base/home.html
@@ -76,13 +76,35 @@
 			<img alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" class="rounded">
 		</div>
 		<div class="col-md-10">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-		</div>
+            <h2>
+                Beats Sound Faleite
+            </h2>
+            <h4 class="mt-4"> Entre na lista de espera</h4>
+            <form action="https://gmail.us1.list-manage.com/subscribe/post?u=9a3e6d72875771b46422ff2eb&amp;id=dbb1d3214d"
+                      method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="form-row align-items-center"
+                      target="_blank" novalidate>
+                <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <label class="sr-only" for="mce-EMAIL">Email</label>
+                        <input type="email" value="" name="EMAIL" class="form-control required" id="mce-EMAIL" placeholder="exemplo@email.com">
+                    </div>
+                    <div class="col-auto">
+                        <label class="sr-only" for="mce-FNAME">Email</label>
+                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Seu nome">
+                    </div>
+
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                                                                                  name="b_9a3e6d72875771b46422ff2eb_dbb1d3214d"
+                                                                                                  tabindex="-1"
+                                                                                                  value=""></div>
+
+                    <div class="col-auto">
+                        <input type="submit" value="Salvar" name="subscribe"
+                                                  id="mc-embedded-subscribe" class="btn btn-primary">
+                    </div>
+                </div>
+        </div>
 	</div>
 </div>
 <footer class="main-footer mt-5 pt-4">
