--- a/beats/sounds/templates/sounds/sounds.html
+++ b/beats/sounds/templates/sounds/sounds.html
@@ -1,39 +1,8 @@
+{% extends 'base/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>Musicas sem direitos autorais | FaBeats</title>
-
-    <meta name="description" content="Música para suas criações">
-    <meta name="author" content="Fabricio Leite">
-	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/apple-touch-icon.png' %}">
-	<link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon-32x32.png' %}">
-	<link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon-16x16.png' %}">
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-	<style>
-	body {
-	background-color: black;
-	color: white;
-	}
-	</style>
-  </head>
-  <body>
-
-  <nav class="navbar navbar-expand-lg navbar-dark bg-black">
-  <a class="navbar-brand mb-0 h1" href="{% url 'base:home' %}">FaBeats</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</nav>
-
+{% block title %}FaBeats | Sounds{% endblock title %}
+{% block description %}Página de sons{% endblock description %}
+{% block body %}
     <div class="container">
     <div class="row">
 		<div class="col-md-12 pt-4">
@@ -41,35 +10,10 @@
 
 	<div class="row">
 		<div class="col-md-12 pt-4">
-			<h2>Beat it</h2>
+			<h2>{{ sound.title }}</h2>
 			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-					src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/412269699
+					src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ sound.soundcloud_id }}
 					&color=%23209eb0&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 		</div>
 	</div>
-
-<footer class="main-footer mt-5 pt-4">
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h3>Entre em Contato</h3>
-				<address>
-					<a href="tel:+351935118601">+351 935-118-601</a>
-					<br/>
-				<a href="mailto:fabricio_2310@hotmail.com">fabricio_2310@hotmail.com</a>
-			<div/>
-		</div>
-	</div>
-	<div class="container mb-5">
-		<div class="row">
-			<div class="col">
-			{% now 'Y' %} Fabeats. Todos direitos reservados.
-			<div/>
-
-		</div>
-	</div>
-
-<footer/>
-
-  </body>
-</html>
+{% endblock body %}
