--- a/beats/sounds/templates/sounds/sounds.html
+++ b/beats/sounds/templates/sounds/sounds.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block title %}FaBeats | Sounds{% endblock title %}
-{% block description %}Página de sons{% endblock description %}
+{% block description %}Página com todos os sons{% endblock description %}
 {% block body %}
     <div class="container">
     <div class="row">
@@ -10,10 +10,16 @@
 
 	<div class="row">
 		<div class="col-md-12 pt-4">
-			<h2>{{ sound.title }}</h2>
-			<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+			<ol>
+				{% for sound in sounds %}
+				<h2>{{ sound.title | default:"No sound" }}</h2>
+				<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" class="mb-4"
 					src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/{{ sound.soundcloud_id }}
 					&color=%23209eb0&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+				{% empty %}
+				<h3>Não foi encontrado nenhum título</h3>
+				{% endfor %}
+			</ol>
 		</div>
 	</div>
 {% endblock body %}
